# src/main/java/io/renren/modules/pc/controller/BigUserIndExpanController.java
@@ -4,6 +4,7 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import io.renren.common.utils.R;
 import io.renren.modules.generator.entity.DljIndustryEntity;
 import io.renren.modules.generator.service.DljIndustryService;
+import io.renren.modules.pc.entity.InvSugEntity;
 import io.renren.modules.pc.util.MenuTreeUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -14,8 +15,8 @@ import java.util.List;
 import java.util.Map;
 
 @RestController
-@RequestMapping("varIndCon")
-public class VarIndController {
+@RequestMapping("BigUserIndExpanCon")
+public class BigUserIndExpanController {
 
     @Autowired
     private DljIndustryService industryService;
@@ -26,37 +27,36 @@ public class VarIndController {
     //获取行业数
     @RequestMapping("/getIndList")
     public R getIndList(@RequestParam Map<String, Object> params){
-
-        //行业树的pid为1000
-        QueryWrapper wrapper = new QueryWrapper();
-        wrapper.eq("pid",1000);
-        List<DljIndustryEntity> list = industryService.list(wrapper);
-        DljIndustryEntity entity = list.get(0);
-
-        QueryWrapper dw = new QueryWrapper();
-        dw.eq("is_ind",1);
-        List<DljIndustryEntity> dList = industryService.list(dw);
-
-        List<Object> menuList = menuTreeUtil.menuList(dList);
-
-
-        return R.ok().put("data", menuList);
-    }
-
-
-
-    @RequestMapping("/getData")
-    public R getData(@RequestParam Map<String, Object> params){
-
         return R.ok().put("data", null);
     }
 
+    @RequestMapping("/getData")
+    public R getData(@RequestParam Map<String, Object> params){
+        return R.ok().put("data", null);
+    }
 
     @RequestMapping("/getDisData")
     public R getDisData(@RequestParam Map<String, Object> params){
 
         return R.ok().put("data", null);
     }
+
+
+    @RequestMapping("/getInvSug")
+    public R getInvSug(@RequestParam Map<String, Object> params){
+        InvSugEntity entity = new InvSugEntity();
+        entity.setGrade("9");
+        entity.setIndCapUtil("60%");
+        entity.setIndCapUtilScore("60");
+        entity.setGrowthEleCon("10%");
+        entity.setGrowthEleConScore("100");
+        entity.setComScore("80");
+        return R.ok().put("data", entity);
+    }
+
+
+
+
 
 
 
